--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
-ios/project.xcworkspace
+ios/RNSurveyMonkey.xcworkspace/
       
 
 # Android/IntelliJ
