--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,11 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
-      
+
+# Other
+ios/Podfile
+ios/RNSurveyMonkey.xcworkspace
+ios/Podfile.lock      
 
 # Android/IntelliJ
 #
