--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 {
   "name": "react-native-survey-monkey",
   "version": "1.0.0",
-  "description": "",
+  "description": "React Native library for Survey Monkey",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +10,8 @@
   "keywords": [
     "react-native"
   ],
-  "author": "",
-  "license": "",
+  "author": "Yaroslav Fuchko",
+  "license": "MIT",
   "devDependencies": {
     "react-native": "0.61.4"
   },
