--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,23 +1,27 @@
+def safeExtGet(prop, fallback) {
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+}
 
 buildscript {
     repositories {
         jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath("com.android.tools.build:gradle:3.4.2")
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion safeExtGet('compileSdkVersion', 28)
+    buildToolsVersion safeExtGet('buildToolsVersion', '28.0.3')
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 22
+        minSdkVersion 21
+        targetSdkVersion safeExtGet('targetSdkVersion', 28)
         versionCode 1
         versionName "1.0"
     }
@@ -28,9 +32,16 @@ android {
 
 repositories {
     mavenCentral()
+    jcenter()
+    google()
+//    maven {
+//        // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+//        url "$rootDir/../node_modules/react-native/android"
+//    }
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
+    implementation 'com.facebook.react:react-native:+'
+    implementation 'com.surveymonkey:surveymonkey-android-sdk:2.0.0'
 }
   
