--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "react-native-survey-monkey",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "React Native library for Survey Monkey",
+  "contributors": [
+    "Yaroslav Fuchko <yarikpwnzer1@gmail.com>",
+    "Ricahrd Mozes <rmozes2@gmail.com>"
+  ],
   "homepage": "https://www.surveymonkey.com",
   "main": "index.js",
   "scripts": {
