add Typescript module definitions

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Yaroslav Fuchko",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^16.9.17",
     "react-native": "0.61.4"
   },
   "peerDependencies": {
