--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ def safeExtGet(prop, fallback) {
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
         google()
     }
 
@@ -32,7 +32,6 @@ android {
 
 repositories {
     mavenCentral()
-    jcenter()
     google()
 //    maven {
 //        // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
